// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddressList should render 1`] = `
<DocumentFragment>
  <div
    data-testid="AddressList"
  >
    <h2
      class="py-5 text-2xl font-bold"
    >
      Select Address
    </h2>
    <div
      class="sc-AxirZ dyYkHQ"
      role="table"
    >
      <table
        class="table-auto"
      >
        <thead>
          <tr
            role="row"
          >
            <th
              class="text-sm text-left select-none text-theme-neutral-500"
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top undefined"
              >
                <div />
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral-500"
              colspan="1"
              data-testid="table__th--1"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top undefined"
              >
                <div>
                  My Address
                </div>
                <div
                  class="flex items-center ml-2 text-theme-color-neutral-500"
                  data-testid="table__Sort"
                >
                  <div
                    class="sc-AxjAm hdgaLj"
                    height="12"
                    width="15"
                  >
                    <svg>
                      sort.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral-500"
              colspan="1"
              data-testid="table__th--2"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top flex justify-center"
              >
                <div />
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral-500"
              colspan="1"
              data-testid="table__th--3"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top undefined"
              >
                <div>
                  Balance
                </div>
                <div
                  class="flex items-center ml-2 text-theme-color-neutral-500"
                  data-testid="table__Sort"
                >
                  <div
                    class="sc-AxjAm hdgaLj"
                    height="12"
                    width="15"
                  >
                    <svg>
                      sort.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral-500"
              colspan="1"
              data-testid="table__th--4"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top undefined"
              >
                <div />
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral-500"
              colspan="1"
              data-testid="table__th--5"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top undefined"
              >
                <div>
                  Delegate
                </div>
                <div
                  class="flex items-center ml-2 text-theme-color-neutral-500"
                  data-testid="table__Sort"
                >
                  <div
                    class="sc-AxjAm hdgaLj"
                    height="12"
                    width="15"
                  >
                    <svg>
                      sort.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral-500"
              colspan="1"
              data-testid="table__th--6"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top undefined"
              >
                <div>
                  Rank
                </div>
                <div
                  class="flex items-center ml-2 text-theme-color-neutral-500"
                  data-testid="table__Sort"
                >
                  <div
                    class="sc-AxjAm hdgaLj"
                    height="12"
                    width="15"
                  >
                    <svg>
                      sort.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral-500"
              colspan="1"
              data-testid="table__th--7"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top flex justify-center"
              >
                <div>
                  Profile
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral-500"
              colspan="1"
              data-testid="table__th--8"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top flex justify-center"
              >
                <div>
                  Status
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral-500"
              colspan="1"
              data-testid="table__th--9"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top undefined"
              >
                <div />
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        >
          <tr
            class="border-b border-theme-neutral-200"
          >
            <td
              class="py-5"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jfYOFQ"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full overflow-hidden rounded-full"
                >
                  <img
                    alt="ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"10\\" cy=\\"40\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"50\\" cx=\\"40\\" cy=\\"50\\" fill=\\"rgb(156, 39, 176)\\"/></svg>"
                    title="ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT"
                  />
                </div>
              </div>
            </td>
            <td
              class="w-20 py-5"
            >
              <div
                class="inline-block truncate align-middle"
              >
                <span
                  class="text-theme-text max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-base"
                  data-testid="address__wallet-name"
                >
                  OLEBank
                </span>
                <span
                  class="sc-AxiKw bOTXee text-theme-neutral-light font-semibold text-base"
                  data-testid="address__wallet-address"
                >
                  ASuusXSW9…6T9GQ3kqT
                </span>
              </div>
            </td>
            <td
              class="w-20 py-5"
            >
              <div
                class="flex justify-center h-full"
              >
                <div
                  class="sc-AxjAm cpczEI text-theme-neutral-600"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    multisig.svg
                  </svg>
                </div>
              </div>
            </td>
            <td
              class="py-5 font-bold text-theme-neutral-dark"
            >
              432,509.08946384 ARK
            </td>
            <td
              class="py-5"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jfYOFQ"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full overflow-hidden rounded-full"
                >
                  <img
                    alt="DACFobAjNEKsc1CtPSMyp5uA4wp6uC3fgC"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"40\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"50\\" cx=\\"10\\" cy=\\"50\\" fill=\\"rgb(255, 87, 34)\\"/></svg>"
                    title="DACFobAjNEKsc1CtPSMyp5uA4wp6uC3fgC"
                  />
                </div>
              </div>
            </td>
            <td
              class="py-5 font-bold"
            >
              <span>
                Delegate 1
              </span>
            </td>
            <td
              class="py-5 font-bold text-theme-neutral-dark"
            >
              <span>
                #2
              </span>
            </td>
            <td
              class="py-5"
            >
              <div
                class="flex justify-center h-full"
              >
                <a
                  href="https://marketsquare.ark.io"
                  rel="noreferrer"
                  target="_blank"
                >
                  <div
                    class="sc-AxjAm cpczEI text-xl text-theme-primary"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      msq.svg
                    </svg>
                  </div>
                </a>
              </div>
            </td>
            <td
              class="py-5"
            >
              <div
                class="flex justify-center h-full"
              >
                <div
                  class="sc-AxjAm cpczEI text-theme-success"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    ok.svg
                  </svg>
                </div>
              </div>
            </td>
            <td
              class="py-5"
            >
              <div
                class="text-right"
              >
                <button
                  class="sc-AxhCb BegvR"
                  color="primary"
                  data-testid="AddressListItem__button--select"
                  type="button"
                >
                  Select
                </button>
              </div>
            </td>
          </tr>
          <tr
            class="border-b border-theme-neutral-200"
          >
            <td
              class="py-5"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jfYOFQ"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full overflow-hidden rounded-full"
                >
                  <img
                    alt="FSuusXSW9kfWnicScSgUTjttP6T9GQ3kqT"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"35\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(103, 58, 183)\\"/><circle r=\\"50\\" cx=\\"10\\" cy=\\"30\\" fill=\\"rgb(139, 195, 74)\\"/></svg>"
                    title="FSuusXSW9kfWnicScSgUTjttP6T9GQ3kqT"
                  />
                </div>
              </div>
            </td>
            <td
              class="w-20 py-5"
            >
              <div
                class="inline-block truncate align-middle"
              >
                <span
                  class="sc-AxiKw bOTXee text-theme-text font-semibold text-base"
                  data-testid="address__wallet-address"
                >
                  FSuusXSW9…6T9GQ3kqT
                </span>
              </div>
            </td>
            <td
              class="w-20 py-5"
            >
              <div
                class="flex justify-center h-full"
              >
                <div
                  class="sc-AxjAm cpczEI text-theme-neutral-600"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    ledger.svg
                  </svg>
                </div>
              </div>
            </td>
            <td
              class="py-5 font-bold text-theme-neutral-dark"
            >
              8,523.3884504 ARK
            </td>
            <td
              class="py-5"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jfYOFQ"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full overflow-hidden rounded-full"
                >
                  <img
                    alt="DBozeHpqr7fie1QrfmNcGzdtEb7NB73AGq"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 193, 7)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"60\\" cx=\\"20\\" cy=\\"70\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"50\\" cx=\\"70\\" cy=\\"30\\" fill=\\"rgb(255, 87, 34)\\"/><circle r=\\"45\\" cx=\\"40\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    title="DBozeHpqr7fie1QrfmNcGzdtEb7NB73AGq"
                  />
                </div>
              </div>
            </td>
            <td
              class="py-5 font-bold"
            >
              <span>
                Delegate 45
              </span>
            </td>
            <td
              class="py-5 font-bold text-theme-neutral-dark"
            >
              <span>
                #45
              </span>
            </td>
            <td
              class="py-5"
            />
            <td
              class="py-5"
            >
              <div
                class="flex justify-center h-full"
              >
                <div
                  class="sc-AxjAm cpczEI text-theme-success"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    ok.svg
                  </svg>
                </div>
              </div>
            </td>
            <td
              class="py-5"
            >
              <div
                class="text-right"
              >
                <button
                  class="sc-AxhCb BegvR"
                  color="primary"
                  data-testid="AddressListItem__button--select"
                  type="button"
                >
                  Select
                </button>
              </div>
            </td>
          </tr>
          <tr
            class="border-b border-theme-neutral-200"
          >
            <td
              class="py-5"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jfYOFQ"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full overflow-hidden rounded-full"
                >
                  <img
                    alt="DSuusXSW9kfWnicScSgUTjttP6T9GQ3kqT"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"100\\" cy=\\"60\\" fill=\\"rgb(0, 150, 136)\\"/><circle r=\\"55\\" cx=\\"60\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/><circle r=\\"35\\" cx=\\"40\\" cy=\\"50\\" fill=\\"rgb(156, 39, 176)\\"/></svg>"
                    title="DSuusXSW9kfWnicScSgUTjttP6T9GQ3kqT"
                  />
                </div>
              </div>
            </td>
            <td
              class="w-20 py-5"
            >
              <div
                class="inline-block truncate align-middle"
              >
                <span
                  class="sc-AxiKw bOTXee text-theme-text font-semibold text-base"
                  data-testid="address__wallet-address"
                >
                  DSuusXSW9…6T9GQ3kqT
                </span>
              </div>
            </td>
            <td
              class="w-20 py-5"
            />
            <td
              class="py-5 font-bold text-theme-neutral-dark"
            >
              0.000462 ARK
            </td>
            <td
              class="py-5"
            >
              <div
                class="sc-AxhUy fHeTTV border-theme-neutral-300"
              />
            </td>
            <td
              class="py-5 font-bold"
            >
              <span
                class="text-theme-neutral-400"
              >
                N/A
              </span>
            </td>
            <td
              class="py-5 font-bold text-theme-neutral-dark"
            />
            <td
              class="py-5"
            />
            <td
              class="py-5"
            />
            <td
              class="py-5"
            >
              <div
                class="text-right"
              >
                <button
                  class="sc-AxhCb BegvR"
                  color="primary"
                  data-testid="AddressListItem__button--select"
                  type="button"
                >
                  Select
                </button>
              </div>
            </td>
          </tr>
          <tr
            class="border-b border-theme-neutral-200"
          >
            <td
              class="py-5"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jfYOFQ"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full overflow-hidden rounded-full"
                >
                  <img
                    alt="HSuusXSW9kfWnicScSgUTjttP6T9GQ3kqT"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 152, 0)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"35\\" cx=\\"90\\" cy=\\"40\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"70\\" fill=\\"rgb(233, 30, 99)\\"/><circle r=\\"50\\" cx=\\"70\\" cy=\\"30\\" fill=\\"rgb(255, 87, 34)\\"/></svg>"
                    title="HSuusXSW9kfWnicScSgUTjttP6T9GQ3kqT"
                  />
                </div>
              </div>
            </td>
            <td
              class="w-20 py-5"
            >
              <div
                class="inline-block truncate align-middle"
              >
                <span
                  class="sc-AxiKw bOTXee text-theme-text font-semibold text-base"
                  data-testid="address__wallet-address"
                >
                  HSuusXSW9…6T9GQ3kqT
                </span>
              </div>
            </td>
            <td
              class="w-20 py-5"
            />
            <td
              class="py-5 font-bold text-theme-neutral-dark"
            >
              0.00 ARK
            </td>
            <td
              class="py-5"
            >
              <div
                class="sc-AxhUy fHeTTV border-theme-neutral-300"
              />
            </td>
            <td
              class="py-5 font-bold"
            >
              <span
                class="text-theme-neutral-400"
              >
                N/A
              </span>
            </td>
            <td
              class="py-5 font-bold text-theme-neutral-dark"
            />
            <td
              class="py-5"
            />
            <td
              class="py-5"
            />
            <td
              class="py-5"
            >
              <div
                class="text-right"
              >
                <button
                  class="sc-AxhCb BegvR"
                  color="primary"
                  data-testid="AddressListItem__button--select"
                  type="button"
                >
                  Select
                </button>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AddressList should render with empty list 1`] = `
<DocumentFragment>
  <div
    data-testid="AddressList"
  >
    <h2
      class="py-5 text-2xl font-bold"
    >
      Select Address
    </h2>
    <div
      class="sc-AxirZ dyYkHQ"
      role="table"
    >
      <table
        class="table-auto"
      >
        <thead>
          <tr
            role="row"
          >
            <th
              class="text-sm text-left select-none text-theme-neutral-500"
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top undefined"
              >
                <div />
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral-500"
              colspan="1"
              data-testid="table__th--1"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top undefined"
              >
                <div>
                  My Address
                </div>
                <div
                  class="flex items-center ml-2 text-theme-color-neutral-500"
                  data-testid="table__Sort"
                >
                  <div
                    class="sc-AxjAm hdgaLj"
                    height="12"
                    width="15"
                  >
                    <svg>
                      sort.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral-500"
              colspan="1"
              data-testid="table__th--2"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top flex justify-center"
              >
                <div />
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral-500"
              colspan="1"
              data-testid="table__th--3"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top undefined"
              >
                <div>
                  Balance
                </div>
                <div
                  class="flex items-center ml-2 text-theme-color-neutral-500"
                  data-testid="table__Sort"
                >
                  <div
                    class="sc-AxjAm hdgaLj"
                    height="12"
                    width="15"
                  >
                    <svg>
                      sort.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral-500"
              colspan="1"
              data-testid="table__th--4"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top undefined"
              >
                <div />
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral-500"
              colspan="1"
              data-testid="table__th--5"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top undefined"
              >
                <div>
                  Delegate
                </div>
                <div
                  class="flex items-center ml-2 text-theme-color-neutral-500"
                  data-testid="table__Sort"
                >
                  <div
                    class="sc-AxjAm hdgaLj"
                    height="12"
                    width="15"
                  >
                    <svg>
                      sort.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral-500"
              colspan="1"
              data-testid="table__th--6"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top undefined"
              >
                <div>
                  Rank
                </div>
                <div
                  class="flex items-center ml-2 text-theme-color-neutral-500"
                  data-testid="table__Sort"
                >
                  <div
                    class="sc-AxjAm hdgaLj"
                    height="12"
                    width="15"
                  >
                    <svg>
                      sort.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral-500"
              colspan="1"
              data-testid="table__th--7"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top flex justify-center"
              >
                <div>
                  Profile
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral-500"
              colspan="1"
              data-testid="table__th--8"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top flex justify-center"
              >
                <div>
                  Status
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral-500"
              colspan="1"
              data-testid="table__th--9"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top undefined"
              >
                <div />
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        />
      </table>
    </div>
  </div>
</DocumentFragment>
`;
